# aacelem

./: Makefile.am  README  configure.ac  version.h
MSVC/: aacelem.sln  aacelem.vcxproj  aacsel.sln  aacsel.vcxproj  aacsel.vcxproj.filters
faad2/include/: neaacdec.h
faad2/libfaad/: common.h  decoder.c  specrec.c  structs.h  syntax.c
src/: bs.c  bs.h  compat.h  compat_posix.c  compat_win32.c  main.c
